# ca-tech-dojo-rust

./: .dockerignore  .env  Cargo.toml  README.md  Rocket.toml  docker-compose.yml
docker/db/: my.cnf
docker/db/init/: init.sql
docker/web/: Dockerfile
migrations/2021-06-05-021501_rust_mysql_init/: down.sql  up.sql
migrations/2021-06-13-162001_create_user/: up.sql
src/: main.rs  repository.rs  token.rs  user.rs  user_repository.rs
src/db/: connection.rs  models.rs  schema.rs
src/domain/: mod.rs
src/domain/game_character/: mod.rs  model.rs  schema.rs
src/domain/user/: mod.rs  models.rs  token.rs  user_repository.rs
src/infrastructure/: db.rs  mod.rs  rocket.rs  testa.rs  token_from_request.rs
src/infrastructure/controller/: character_controller.rs  gacha_controller.rs  mod.rs  user_controller.rs
src/infrastructure/db/: mod.rs  models.rs  schema.rs
src/infrastructure/framework/: db_connection.rs  mod.rs
src/infrastructure/framework/controller/: character_controller.rs  gacha_controller.rs  mod.rs  user_controller.rs
src/infrastructure/repository/: game_character_repository_impl.rs  mod.rs  user_repository.rs  user_repository_impl.rs
src/usecase/: gacha.rs  mod.rs  user_game_character.rs  user_usecase.rs
