[package]
name = "ca-tech-dojo-rust"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = "0.4.10"
rocket_contrib = { version = "0.4.10", features = ["uuid"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.3"
diesel = { version = "1.4.4", features = ["mysql", "r2d2"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
anyhow = "1.0.40"
dotenv = "0.15.0"
log = "0.4.0"
env_logger = "0.8.4"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "mysql" ] }
tokio = { version = "1.7.0", features = ["full"] }